# igpost

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/igpost/: cli.py
src/igpost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/igpost/api/: app.py
