[project]
name = "igpost"
version = "0.1.0"
description = "FastAPI service to upload videos to Instagram using instagrapi"
readme = "README.md"
authors = [ { name = "Sahana" } ]
requires-python = ">=3.9"
dependencies = [
  "instagrapi>=2.2.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
